# nlq

./: .env.example  .gitignore  AGENTS.md  IMPLEMENTATION_PLAN.md  README.md  docker-compose.ci.yml  docker-compose.yml
.cursor/rules/: docker-webui.mdc  nlq-core.mdc  python-services.mdc  query-agent-routing.mdc
.cursor/skills/nlq-debug-qa/: SKILL.md
.cursor/skills/nlq-local-dev/: SKILL.md
.github/workflows/: ci.yml
document-console/: Dockerfile  pyproject.toml
document-console/app/: api_client.py  config.py  main.py  ui.py
document-console/tests/: test_api_client.py
document-index/: Dockerfile  pyproject.toml
document-index/app/: config.py  main.py
document-index/app/adapters/auth/: tenant_resolver.py
document-index/app/adapters/chunking/: chonkie_chunker.py  hybrid_chunker.py
document-index/app/adapters/embedding/: fastembed_embedder.py
document-index/app/adapters/extractors/: docling_extractor.py  tika_extractor.py
document-index/app/adapters/repo/: postgres_document_repo.py
document-index/app/adapters/reranker/: passthrough_reranker.py
document-index/app/adapters/storage/: local_object_store.py
document-index/app/adapters/vector/: hybrid_search.py  qdrant_index.py
document-index/app/delivery/: rest.py  tool_rpc.py  worker.py
document-index/app/domain/: chunk.py  document.py  errors.py
document-index/app/usecases/: fetch_chunk.py  ingest_document.py  list_documents.py  ports.py  search_documents.py
document-index/tests/: fakes.py  test_contract.py  test_domain.py  test_integration_qdrant.py  test_openapi_smoke.py  test_usecases.py
evals/: test_rag_quality.py
evals/golden/: cases.json
infra/postgres/: init.sql
perf/k6/: rag_load.js
query-agent/: Dockerfile  pyproject.toml
query-agent/app/: config.py  main.py  observability.py
query-agent/app/adapters/: conversation_history.py  document_index_client.py  llm_langchain.py
query-agent/app/delivery/: ask.py  openai_compat.py
query-agent/app/domain/: intents.py  state.py
query-agent/app/graph/: builder.py  nodes.py  template.py
query-agent/app/prompts/: answer_system.py  answer_user.py  chitchat.py  classification.py  query_prep.py
query-agent/app/usecases/: build_answer.py  classify.py  context_budget.py  contextual_search.py  parse_webui_rag.py  ports.py
query-agent/tests/: fakes.py  test_context_budget.py  test_contextual_search.py  test_graph.py  test_openai_compat.py  test_parse_webui_rag.py  test_usecases.py
scripts/: compose_smoke.py  mock_openai_server.py  test_upload.py
